# inexmo

./: .gitignore  README.md  perf.py  pyproject.toml  test.py  test_other.py
.github/workflows/: lint-test.yml
examples/: distance_matrix.py  loop.py
src/inexmo/: __init__.py  compile.py  cppmodule.py  errors.py  logger.py  types.py  utils.py
src/test/: conftest.py  other_x.py  test_basic.py  test_basic_again.py  test_caching.py  test_callable.py  test_compound_types.py  test_cxx_std.py  test_cxx_std_conflict.py  test_cxx_std_invalid.py  test_external_shared.py  test_external_source.cpp  test_external_source.py  test_external_static.py  test_help.py  test_inplace.py  test_kwargs.py  test_lib.cpp  test_lib.h  test_memory.py  test_method.py  test_nested.py  test_numpy.py  test_qualifiers.py  test_rvp.py  test_slice.py  test_specialisations.py  test_stl.py  test_types.py  test_typing.py  test_utils.py  test_vectorise.py
src/xenoform/: __init__.py  compile.py  cppmodule.py  errors.py  types.py  utils.py
